test/domains/shannon/interiorErrorPosLarge.chpl
var d2 : domain(2) = {12..15, 12..15};
writeln("domain(2): \t\t", d2);
writeln("interior(5, 5): ", d2.interior(5, 5));
